--- a/project/app/.env
+++ b/project/app/.env
@@ -29,7 +29,7 @@ APP_SECRET=db3de356ad151d8151965815140f3f60
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
-DATABASE_URL="postgresql://symfony:PotcHeNtraZu@db_app:5432/app?serverVersion=13&charset=utf8"
+DATABASE_URL="postgresql://symfony:PotcHeNtraZu@database:5432/db_app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
