--- a/project/app/config/routes.yaml
+++ b/project/app/config/routes.yaml
@@ -2,7 +2,14 @@ controllers:
     resource: ../src/Controller/
     type: attribute
 
-# the "app_lucky_number" route name is not important yet
-app_lucky_number:
-    path: /lucky/number
-    controller: App\Controller\LuckyController::number
+app_produtos:
+    path: /produto/
+    controller: App\Controller\ProdutoController::index
+
+app_home:
+    path: /home/
+    controller: App\Controller\HomeController::index
+
+app_logout:
+    path: /logout
+    controller: App\Controller\SecurityController::logout
